--- a/vision-ui-dashboard-react/package.json
+++ b/vision-ui-dashboard-react/package.json
@@ -26,6 +26,7 @@
 		"axios": "^1.8.4",
 		"chroma-js": "2.1.2",
 		"install": "^0.13.0",
+		"jwt-decode": "^4.0.0",
 		"prop-types": "15.7.2",
 		"react": "^18.2.0",
 		"react-apexcharts": "^1.3.9",
